--- a/SimpleCalculator/Views/Home/Index.cshtml
+++ b/SimpleCalculator/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row">
-        <button class="btn btn-primary" onclick="appendToResult('0')">0</button>
+        <button class="btn btn-primary" onclick="appendToResult('0')">zero</button>
         <button class="btn btn-info" onclick="appendOperator('/')">/</button>
         <button class="btn btn-warning" onclick="calculateResult()">=</button>
         <button class="btn btn-danger" onclick="clearScreen()">C</button>
